deploy: 01780421bedeca5dcf74d99720e4c530e5f0605c

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -218,11 +218,11 @@
 <li><a href="scripts/nqp/processors/input.html">scripts.nqp.processors.input</a></li>
 <li><a href="scripts/nqp/processors/intent.html">scripts.nqp.processors.intent</a></li>
 <li><a href="snecs/_detail.html">snecs._detail</a></li>
-<li><a href="tests/engine/component_test.html">tests.engine.component_test</a></li>
-<li><a href="tests/engine/effect_test.html">tests.engine.effect_test</a></li>
-<li><a href="tests/engine/state_test.html">tests.engine.state_test</a></li>
-<li><a href="tests/engine/utility_test.html">tests.engine.utility_test</a></li>
-<li><a href="tests/mocks/world_mock.html">tests.mocks.world_mock</a></li>
+<li><a href="tests/engine/test_component.html">tests.engine.test_component</a></li>
+<li><a href="tests/engine/test_effect.html">tests.engine.test_effect</a></li>
+<li><a href="tests/engine/test_state.html">tests.engine.test_state</a></li>
+<li><a href="tests/engine/test_utility.html">tests.engine.test_utility</a></li>
+<li><a href="tests/mocks/mock_world.html">tests.mocks.mock_world</a></li>
 </ul>
 
            </div>
