deploy: 2b89c64124ef38daccd806c02f66950b3b16476b

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -222,6 +222,7 @@
 <li><a href="tests/engine/test_effect.html">tests.engine.test_effect</a></li>
 <li><a href="tests/engine/test_state.html">tests.engine.test_state</a></li>
 <li><a href="tests/engine/test_utility.html">tests.engine.test_utility</a></li>
+<li><a href="tests/mocks/mock_effect.html">tests.mocks.mock_effect</a></li>
 <li><a href="tests/mocks/mock_world.html">tests.mocks.mock_world</a></li>
 </ul>
 
